[project]
name = "requirements"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "git+https://github.com/EnviDat/ckan-forked.git@2.9",
    "alembic==1.0.0",
    "babel==2.7.0",
    "beaker==1.11.0",
    "bleach==3.1.4",
    "certifi==2021.5.30",
    "chardet==4.0.0",
    "click==7.1.2",
    "dominate==2.4.0",
    "fanstatic==1.1",
    "feedgen==0.9.0",
    "flask-babel==1.0.0",
    "flask-multistatic==1.0",
    "flask==1.1.1",
    "funcsigs==1.0.2",
    "idna==2.10",
    "itsdangerous==1.1.0",
    "jinja2==2.10.1",
    "lxml==4.6.3",
    "mako==1.1.5",
    "markdown==3.3.3",
    "markupsafe==1.1.1",
    "nose==1.3.7",
    "passlib==1.6.5",
    "polib==1.0.7",
    "psycopg2-binary==2.9.3",
    "pyjwt==1.7.1",
    "pysolr==3.6.0",
    "python-dateutil==2.8.2",
    "python-editor==1.0.4",
    "python-magic==0.4.15",
    "pytz>=2016.4,<2025",
    "pyutilib==5.7.1",
    "pyyaml==5.4.1",
    "redis==3.5.3",
    "repoze-lru==0.7",
    "repoze-who==2.3",
    "requests==2.25.1",
    "routes==1.13",
    "rq==1.0",
    "shutilwhich==1.1.0",
    "simplejson==3.10.0",
    "six==1.16.0",
    "sqlalchemy==1.3.5",
    "sqlparse==0.3.0",
    "tzlocal==1.3",
    "unicodecsv==0.14.1",
    "urllib3==1.26.6",
    "watchdog==2.1.5",
    "webassets==0.12.1",
    "webencodings==0.5.1",
    "webob==1.8.7",
    "werkzeug[watchdog]==1.0.0",
    "zope-interface==5.2.0",
    "flask-debugtoolbar==0.11.0",
    "gunicorn==20.1.0",
    "ckanext-hierarchy @ file:///${PROJECT_ROOT}/ckanext/ckanext-hierarchy",
    "ckanext-passwordless-api==1.1.1",
    "doigenerator @ git+https://github.com/eawag-rdm/doigenerator.git@master",
    "ckantoolkit==0.0.4",
    "ckanext-datacite-publication @ file:///${PROJECT_ROOT}/ckanext/ckanext-datacite_publication",
    "ckanext-repeating @ file:///${PROJECT_ROOT}/ckanext/ckanext-repeating",
    "ckanapi",
    "ckantoolkit>=0.0.2",
    "pytz",
    "six",
    "ckanext-scheming @ file:///${PROJECT_ROOT}/ckanext/ckanext-scheming",
    "ckanext-composite @ file:///${PROJECT_ROOT}/ckanext/ckanext-composite",
    "boto3==1.20.26",
    "ckanext-cloudstorage @ file:///${PROJECT_ROOT}/ckanext/ckanext-cloudstorage",
    "xmltodict>=0.10.2",
    "flufl-enum>=4.1.1",
    "lxml>=3.7.3",
    "ckanext-package-converter @ file:///${PROJECT_ROOT}/ckanext/ckanext-package_converter",
    "ckanext-passwordless @ file:///${PROJECT_ROOT}/ckanext/ckanext-passwordless",
    "ckanext-restricted @ file:///${PROJECT_ROOT}/ckanext/ckanext-restricted",
    "GeoAlchemy==0.6.*",
    "GeoAlchemy2==0.5.0",
    "Shapely==1.7.*",
    "OWSLib==0.18.0",
    "lxml==4.6.*",
    "argparse",
    "pyparsing==3.0.*",
    "requests<2.28,>=2.25",
    "ckanext-spatial @ file:///${PROJECT_ROOT}/ckanext/ckanext-spatial",
    "pytz<2025,>=2016.4",
    "xmltodict",
    "ckanext-oaipmh-repository @ file:///${PROJECT_ROOT}/ckanext/ckanext-oaipmh_repository",
    "future==0.18.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"